<resources>
    <string name="app_name">Prueba</string>
    <string name="titulo_cultivos">Cultivos</string>
    <string name="mis_cultivos">Mis Cultivos</string>
    <string name="registrar_cultivo">(a) Registrar Cultivo</string>
    <string name="nombre">Nombre</string>
    <string name="opciones">Opciones</string>
    <string name="cultivo_1">1. Cultivo ↑</string>
    <string name="cultivo_2">2. Cultivo ↑</string>
    <string name="cultivo_3">3. Cultivo ↑</string>
    <string name="cultivo_4">4. Cultivo ↑</string>
    <string name="registrar">Registrar</string>
    <string name="editar">Editar</string>
    <string name="cultivo_x">Cultivo X</string>
    <string name="eliminar">Eliminar</string>
    <string name="regis_cultivo">Registrar Cultivo</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="cultivos">Cultivos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="perfil">Perfil</string>
    <string name="cono_cultivo">Ícono cultivo</string>
    <string name="nombre_del_cultivo">Nombre del cultivo</string>
    <string name="nombre_cultivo">Nombre del cultivo</string>
    <string name="area">Área (m²)</string>
    <string name="aceptar1">Aceptar</string>
    <string name="cultivo_registrado_exitosamente">Cultivo registrado exitosamente 🌱</string>
    <string name="aceptar2">Aceptar</string>
    <string name="tipo_de_cultivo">Tipo de cultivo</string>
    <string name="conectar_o_desconectar">conectar_o_desconectar</string>
    <string name="cono_dispositivo" />
    <string name="consultor" />
    <string name="t_tulo">Título</string>
    <string name="descripci_n">Descripción</string>
    <string name="humedad">Humedad (%)</string>
    <string name="temperatura_c">Temperatura (°C)</string>
    <string name="enviar_consulta">Enviar consulta</string>
    <string name="foto_perfil" />
    <string name="ver_consultas" />
    <string name="ver_cultivos" />
    <string name="select_role">Seleccionar rol</string>
    <string name="icon_type" />
    <string-array name="roles_array">
        <item>Agricultor</item>
        <item>Consultor</item>
    </string-array>
    <string name="cloudinary_cloud_name" translatable="false">TU_CLOUD_NAME</string>

</resources>