<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/t_tulo"
        android:inputType="textCapSentences"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/descripci_n"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="5"
        android:gravity="top"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enviar_consulta"
        android:textColor="@android:color/white"
        android:backgroundTint="#225A47"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
