<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:layout_margin="8dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_crop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_cultivo"
            android:contentDescription="@string/cono_cultivo"/>

        <TextView
            android:id="@+id/txt_crop_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/nombre_del_cultivo"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/txt_crop_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="Categoría"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txt_crop_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="Área"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />
        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/editar"/>

        <ImageButton
            android:id="@+id/btn_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eliminar"/>

        <ImageButton
            android:id="@+id/btn_graphic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_search"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eliminar"/>

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eliminar"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
